myproject/inkle/static/css/header.css
/* Copyright 2012 Chad Heise & Jacob Wenger - All Rights Reserved */

#header
{
    position: fixed;
    background-color: #288D42;
    height: 80px;
    width: 100%;
    top: 0px;
    z-index: 1;
}

#logo
{
    height: 50px;
    width: 175px;
    margin-top: 14px;
}

#logo:hover
{
    background-color: #ABD4B0;
    /*background-color: #70A9DB;*/
    padding: 5px;
    margin: 9px 0px 0px -5px;
}

#headerSearch
{
    height: 25px;
    margin-top: 26px;
    font-size: 16px;
    border: inset 2px #BBB;
    background-color: #FFF;
}

#headerSearchInput
{
    height: 19px;
    margin: 3px 0px 3px 5px;
    font-size: 16px;
    outline: none;
    border: none;
    border-right: solid 1px #288D42;
    padding-right: 4px;
    width: 91%;
    float: left;
}

#headerSearchButton
{
    float: left;
    padding: 3px 4px 7px 5px;
    height: 19px;
    width: 19px;
    cursor: pointer;
    clear: right;
}

#headerSearchSuggestions
{
    margin: 27px 0px 0px -2px;
    width: 430px;
}

.emptySearchInput
{
    color: #888;
}

#requestNotification
{
    color: #FFF;
    font-size: 14px;
    text-align: center;
    font-weight: bold;
    background-color: #CD1A26;
    border: solid 1px #CD1A26;
    border-radius: 5px;
    width: 30px;
    height: 24px;
    padding-top: 6px;
    margin-top: 25px;
}

#requestNotification:hover
{
    border-color: #FFF;
}

#requestNotificationLink:link, #requestNotificationLink:visited
{
    text-decoration: none;
}

#headerMemberSection
{
    margin-top: 20px;
}

#headerMemberContainer
{
    float: right;
}

#headerMemberContainer:hover
{
    background-color: #ABD4B0;
}

#headerMemberContainer a
{
    text-decoration: none;
}

#headerMemberName
{
    float: right;
    text-decoration: none;
    color: #FFF;
    font-size: 18px;
    font-weight: bold;
    padding: 7px 5px 7px 5px;
}

#headerMemberImageContainer
{
    float: right;
    padding: 5px 5px 0px 5px;
}

#headerMemberImage
{
    padding: 0px;
    height: 28px;
    width: 28px;
}

#headerDropdownButton
{
    float: right;
    clear: right;
    height: 8px;
    width: 10px;
    padding: 16px 5px 14px 5px;
    margin-left: 2px;
    cursor: pointer;
}

#headerDropdownButton:hover, .selectedHeaderDropdownButton
{
    background-color: #ABD4B0;
}

.headerDropdownButtonHighlighted
{
    background-color: #E5736F;
}

#headerDropdown
{
    display: none;
    z-index: 1;
    position: absolute;
    width: 175px;
    background-color: #EEE;
    border-radius: 3px 0px 3px 3px;
    border: solid 2px #AAA;
}

#headerDropdown a
{
    text-decoration: none;
}

.headerDropdownOption
{
    color: black;
    font-size: 14px;
    padding: 7px 0px 7px 10px;
}

.headerDropdownOption:hover
{
    background-color: #ABD4B0;
}

.headerDropdownOptionHighlighted
{
    color: #CD1A26;
    font-weight: bold;
    font-size: 14px;
    padding: 7px 0px 7px 10px;
}

